# CryptoMaster

./: .gitignore  CMakeLists.txt  FileHandler.cpp  FileHandler.h  README.md  Utils.cpp  Utils.h  conanfile.py
.github/workflows/: build.yml
Config/: Config.cmake.in  CryptoMasterConfig.cmake.in
examples/: CMakeLists.txt  conanfile.txt  example.txt
examples/src/: test_main.cpp
include/: CryptoMaster.h  FileHandler.h  Utils.h
include/CryptoMaster/: CryptoMaster.h  FileHandler.h
src/: CryptoMaster.cpp  FileHandler.cpp  Utils.cpp
